# Nodes

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/: milestone-1.1-project-scaffolding.md  milestone-1.2-identity-system.md  milestone-1.3-transport-abstraction.md  milestone-1.4-node-creation.md  milestone-1.5-text-channels.md  milestone-1.6-direct-messages.md  milestone-1.7-friend-system.md  milestone-1.8-profile-settings-polish.md  performance-gunjs-batching.md  polish-pass-milestones-1.1-1.3.md  ui-ux-polish-design-system.md
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vitest.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: main.rs  tray.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src/components/: ErrorBoundary.tsx  ToastContainer.tsx
apps/desktop/src/hooks/: index.ts  useAvatar.ts  useChannelSubscription.ts  useDMSubscriptions.ts  useDirectoryRefresh.ts  useDisplayName.ts  useDisplayNames.ts  useGracefulShutdown.ts  useKeyboardShortcuts.ts  useLinkPreview.ts  useMemberSubscription.ts  usePermissions.ts  (+10 more)
data/gun-dev/: !
infrastructure/livekit/: README.md
infrastructure/relay/: Dockerfile  README.md  fly.toml  railway.toml  relay.mjs
infrastructure/turn/: README.md
scripts/: deploy-staging.sh  gun-relay.mjs  libp2p-relay.mjs
(+130 files in other folders)
